--- a/Age-calculator-app/src/App.css
+++ b/Age-calculator-app/src/App.css
@@ -143,6 +143,10 @@ button.submit-btn {
 }
 
 @media screen and (max-width:480px) {
+  body {
+    padding: 10px
+  }
+
   .divider {
     justify-content: center;
   }
